[tool.poetry]
name = "nonebot_plugin_picsbank"
version = "0.1.0"
description = ""
authors = ["alex_newton <sharenfan222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
