[tool.poetry]
name = "nonebot_plugin_picsbank"
version = "0.1.2"
description = ""
authors = ["Alex Newton <sharenfan222@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/Diaosi1111/nonebot_plugin_picsbank"
keywords = ["nonebot", "nonebot2", "picsbank"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.7.4.post0"
ujson = "^4.0.2"
nonebot2 = "^2.0.0-alpha.15"
nonebot-adapter-cqhttp = "^2.0.0-alpha.15"
numpy = "^1.21.4"
Pillow = "^8.2.0"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
